# mlax

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
mlax/: __init__.py  compiler.py  rules.py
tests/: test_compiler.py
