[tool.poetry]
name = "mlax"
version = "0.1.0"
description = ""
authors = ["McCoy R. Becker <mccoyb@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jax = "^0.4.35"
mlx = "^0.20.0"
beartype = "^0.19.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
