[tool.poetry]
name = "mlax"
version = "0.1.0"
description = ""
authors = ["McCoy R. Becker <mccoyb@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jax = "^0.4.35"
mlx = "^0.20.0"
beartype = "^0.19.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[tool.vulture]
paths = ["mlax"]
ignore_names = ["cls"]
min_confidence = 70
sort_by_size = true

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
show_missing = true
fail_under = 45

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
exclude = ["**/__pycache__"]
defineConstant = { DEBUG = true }
typeCheckingMode = "strict"
deprecateTypingAliases = true

# `strict` sets all of these to error; these remaining `none` entries are tests that we can't yet
# pass.
reportMissingTypeStubs = "none"
reportMissingParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
extend-include = ["*.ipynb"]
line-length = 88
indent-width = 4

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
preview = true
extend-select = ["I", "RUF"]
select = ["E4", "E7", "E9", "F"]
# F403 disables errors from `*` imports, which we currently use heavily.
ignore = ["F403", "F405", "F811", "E402", "RUF009", "RUF003"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
preview = true
skip-magic-trailing-comma = false
docstring-code-format = true
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
